# D-D-Helper

./: .gitignore  CMakeLists.txt  CPP_KONZEPTE.md  QT_KONZEPTE.md  README.md  README_WEBSOCKET.md  log.txt  websocket_client.html
.github/workflows/: ci.yml
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-tests/DnDInitiativeTracker_autogen/: deps
build-tests/DnDInitiativeTracker_autogen/UVLADIE3JM/: moc_initiativetracker.cpp  moc_initiativetracker.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-tests/DnDInitiativeTracker_autogen/include/: ui_mainwindow.h
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tst_character  tst_initiativetracker
build-tests/tests/tst_character_autogen/: deps
build-tests/tests/tst_character_autogen/VNU7RW3YIC/: moc_initiativetracker.cpp.d
build-tests/tests/tst_character_autogen/include/: tst_character.moc  tst_character.moc.d
build-tests/tests/tst_initiativetracker_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-tests/tests/tst_initiativetracker_autogen/VNU7RW3YIC/: moc_initiativetracker.cpp  moc_initiativetracker.cpp.d
build-tests/tests/tst_initiativetracker_autogen/include/: tst_initiativetracker.moc  tst_initiativetracker.moc.d
src/: character.cpp  character.h  initiativetracker.cpp  initiativetracker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  tst_character.cpp  tst_initiativetracker.cpp
